src/examples/errors/call_type_mismatch_var.del


def f(int a) -> nil {

    return;
}

def main() -> nil {

    //
    //  This is the wrong type
    //
    real a = 3.33;
    f(a);

    return;
}